# ErikOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  build.sh  efi_cpy.sh
